<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HELP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dzwon">Zadzwoń po pomoc</string>
    <string name="sms">Powiadom bliskiego</string>
    <string name="szukaj">Szukaj apteki w okolicy</string>
    <string name="Pierwsza_pomoc">Instrukcje pierwszej pomocy</string>
    <string name="Info">Medyczne informacje o sobie</string>
    <string name="title_activity_sms">SMS</string>
    <string name="title_activity_bliscy">Bliscy</string>
    <string name="title_activity_instrukcje">Instrukcje</string>
    <string name="title_activity_firt_start">FirtStart</string>
    <string name="title_activity_first_start">FirstStart</string>
    <string name="title_activity_reanimacja">Reanimacja</string>
    <string name="title_activity_oparzenia">Oparzenia</string>
    <string name="title_activity_omdlenia">Omdlenia</string>
    <string name="title_activity_zlamania">Zlamania</string>
    <string name="title_activity_skaleczenia">Skaleczenia</string>
    <string name="title_activity_zadwon">Zadzwon</string>
    <string name="title_activity_medyczne">Medyczne informacje</string>
    <string name="grupa">Grupa krwi:</string>
    <string name="choroby">Choroby zakaźne:</string>
    <string name="leki">Aktualne leki:</string>
    <string name="zmiany">Zapisz zmiany</string>
    <string name="apteka">Apteka</string>


</resources>
